<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/sv_personal_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/white"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_15">

            <RelativeLayout
                android:paddingBottom="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView

                    android:id="@+id/iv_user_photo"
                    android:layout_width="@dimen/width_110"
                    android:layout_height="@dimen/height_110"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="Avatar"
                    android:src="@drawable/agregar"
                    android:textAlignment="center" />

                <TextView
                    android:layout_below="@+id/iv_user_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="Agrega tu foto"
                    android:textAlignment="center" />


            </RelativeLayout>


                <LinearLayout
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:id="@+id/ll_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_45"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorTexto"
                        app:passwordToggleTint="@color/yellow"
                        >

                        <android.support.design.widget.TextInputEditText

                            android:id="@+id/edt_reg_name"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName|textCapWords"
                            android:nextFocusDown="@id/edt_reg_username"
                            android:textColor="@color/colorTexto"
                            android:textSize="@dimen/font_size_20sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:id="@+id/divider_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_1"
                    android:layout_below="@+id/ll_name"

                    android:background="@color/colorTexto" />


            <LinearLayout
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:id="@+id/ll_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto"

                    app:passwordToggleTint="@color/yellow"
                    >

                    <android.support.design.widget.TextInputEditText

                        android:id="@+id/edt_reg_username"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_username"
                        android:inputType="textPersonName|textCapWords"
                        android:nextFocusDown="@id/edt_reg_username"
                        android:textSize="@dimen/font_size_20sp"
                        android:textColor="@color/colorTexto"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:id="@+id/divider_name2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:layout_below="@+id/ll_name"

                android:background="@color/colorTexto" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColorHint="@color/colorTexto">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_mobile"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>

            <LinearLayout
                android:id="@+id/llema"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_marginBottom="5dp"
                android:id="@+id/vem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>

            <LinearLayout
                android:id="@+id/llpass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/yellow">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/vpss"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>

            <LinearLayout
                android:id="@+id/llcpass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/yellow">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:id="@+id/vcpss"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_date_of_birth"
                        android:inputType="date"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionNext"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusable="false" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_gender"
                    android:textColor="@color/colorTexto"
                    android:textSize="@dimen/font_size_20sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_10"/>
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/opciones_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:checked="true"
                        android:text="Masculino"
                        android:textColor="@color/colorTexto"
                        android:buttonTint="@color/yellow"/>

                    <RadioButton
                        android:id="@+id/radio_femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="Femenino"
                        android:textColor="@color/colorTexto"
                        android:buttonTint="@color/yellow"/>
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/height_45"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTexto">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edt_reg_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:lines="1"
                        android:imeOptions="actionDone"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorTexto"
                        android:textSize="@dimen/font_size_20sp"
                        android:focusableInTouchMode="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_1"
                android:background="@color/colorTexto"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"/>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>